Fix building with Clang 4.0
Clang 4.0.1 is less than two years old and still in widespread use.
It doesn't support some of the more recent diagnostic warnings.

For older verisons of CMake the CLANG_VERSION_STRING may not be defined,
so set it to CMAKE_CXX_COMPILER_VERSION after we've already confirmed
that we're building with Clang.

Change-Id: I68c6270c2e90c50b1de1657e16e914c89b336952

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,12 +239,18 @@ else()
     )
 
     if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-        list(APPEND SWIFTSHADER_COMPILE_OPTIONS
-            "-Werror=unused-lambda-capture"
-            "-Werror=string-conversion"
-            "-Werror=extra-semi"
-            "-Werror=ignored-qualifiers"
-        )
+        if(NOT DEFINED CLANG_VERSION_STRING)
+            set(CLANG_VERSION_STRING CMAKE_CXX_COMPILER_VERSION)
+        endif()
+
+        if(CLANG_VERSION_STRING VERSION_GREATER_EQUAL 5)
+            list(APPEND SWIFTSHADER_COMPILE_OPTIONS
+                "-Werror=unused-lambda-capture"
+                "-Werror=string-conversion"
+                "-Werror=extra-semi"
+                "-Werror=ignored-qualifiers"
+            )
+        endif()
     endif()
 
     # Remove xor, and, or and friends from the list of keywords, they are used
