--- a/src/Reactor/BUILD.gn
+++ b/src/Reactor/BUILD.gn
@@ -139,12 +139,10 @@ config("swiftshader_reactor_with_subzero_private_config") {
       "/wd4800",
     ]
 
-    if (use_swiftshader_with_subzero) {
-      cflags += [
-        "/wd4018",  # signed/unsigned mismatch (llvm)
-        "/wd4310",  # cast truncates constant value (llvm)
-      ]
-    }
+    cflags += [
+      "/wd4018",  # signed/unsigned mismatch (llvm)
+      "/wd4310",  # cast truncates constant value (llvm)
+    ]
 
     if (is_clang) {
       if (is_debug) {
@@ -176,173 +174,188 @@ config("swiftshader_reactor_private_config") {
     ]
 
     if (target_cpu == "x86" || target_cpu == "x64") {
-        cflags += [ "-msse2" ]
+      cflags += [ "-msse2" ]
     }
   }
 }
 
-if (use_swiftshader_with_subzero) {
-  swiftshader_source_set("swiftshader_subzero") {
-    subzero_dir = "../../third_party/subzero"
-    subzero_llvm_dir = "../../third_party/llvm-subzero"
+swiftshader_source_set("swiftshader_subzero") {
+  subzero_dir = "../../third_party/subzero"
+  subzero_llvm_dir = "../../third_party/llvm-subzero"
 
-    sources = [
-      "$subzero_dir/src/IceAssembler.cpp",
-      "$subzero_dir/src/IceCfg.cpp",
-      "$subzero_dir/src/IceCfgNode.cpp",
-      "$subzero_dir/src/IceClFlags.cpp",
-      "$subzero_dir/src/IceELFObjectWriter.cpp",
-      "$subzero_dir/src/IceELFSection.cpp",
-      "$subzero_dir/src/IceFixups.cpp",
-      "$subzero_dir/src/IceGlobalContext.cpp",
-      "$subzero_dir/src/IceGlobalInits.cpp",
-      "$subzero_dir/src/IceInst.cpp",
-      "$subzero_dir/src/IceInstrumentation.cpp",
-      "$subzero_dir/src/IceIntrinsics.cpp",
-      "$subzero_dir/src/IceLiveness.cpp",
-      "$subzero_dir/src/IceLoopAnalyzer.cpp",
-      "$subzero_dir/src/IceMangling.cpp",
-      "$subzero_dir/src/IceMemory.cpp",
-      "$subzero_dir/src/IceOperand.cpp",
-      "$subzero_dir/src/IceRNG.cpp",
-      "$subzero_dir/src/IceRangeSpec.cpp",
-      "$subzero_dir/src/IceRegAlloc.cpp",
-      "$subzero_dir/src/IceRevision.cpp",
-      "$subzero_dir/src/IceSwitchLowering.cpp",
-      "$subzero_dir/src/IceTargetLowering.cpp",
-      "$subzero_dir/src/IceTargetLoweringX86.cpp",
-      "$subzero_dir/src/IceThreading.cpp",
-      "$subzero_dir/src/IceTimerTree.cpp",
-      "$subzero_dir/src/IceTypes.cpp",
-      "$subzero_dir/src/IceVariableSplitting.cpp",
-      "$subzero_llvm_dir/lib/Demangle/ItaniumDemangle.cpp",
-      "$subzero_llvm_dir/lib/Support/APInt.cpp",
-      "$subzero_llvm_dir/lib/Support/Atomic.cpp",
-      "$subzero_llvm_dir/lib/Support/CommandLine.cpp",
-      "$subzero_llvm_dir/lib/Support/ConvertUTF.cpp",
-      "$subzero_llvm_dir/lib/Support/ConvertUTFWrapper.cpp",
-      "$subzero_llvm_dir/lib/Support/Debug.cpp",
-      "$subzero_llvm_dir/lib/Support/Errno.cpp",
-      "$subzero_llvm_dir/lib/Support/ErrorHandling.cpp",
-      "$subzero_llvm_dir/lib/Support/FoldingSet.cpp",
-      "$subzero_llvm_dir/lib/Support/Hashing.cpp",
-      "$subzero_llvm_dir/lib/Support/Host.cpp",
-      "$subzero_llvm_dir/lib/Support/ManagedStatic.cpp",
-      "$subzero_llvm_dir/lib/Support/MemoryBuffer.cpp",
-      "$subzero_llvm_dir/lib/Support/Mutex.cpp",
-      "$subzero_llvm_dir/lib/Support/NativeFormatting.cpp",
-      "$subzero_llvm_dir/lib/Support/Path.cpp",
-      "$subzero_llvm_dir/lib/Support/Process.cpp",
-      "$subzero_llvm_dir/lib/Support/Program.cpp",
-      "$subzero_llvm_dir/lib/Support/Regex.cpp",
-      "$subzero_llvm_dir/lib/Support/Signals.cpp",
-      "$subzero_llvm_dir/lib/Support/SmallPtrSet.cpp",
-      "$subzero_llvm_dir/lib/Support/SmallVector.cpp",
-      "$subzero_llvm_dir/lib/Support/StringExtras.cpp",
-      "$subzero_llvm_dir/lib/Support/StringMap.cpp",
-      "$subzero_llvm_dir/lib/Support/StringRef.cpp",
-      "$subzero_llvm_dir/lib/Support/StringSaver.cpp",
-      "$subzero_llvm_dir/lib/Support/TargetParser.cpp",
-      "$subzero_llvm_dir/lib/Support/Threading.cpp",
-      "$subzero_llvm_dir/lib/Support/Timer.cpp",
-      "$subzero_llvm_dir/lib/Support/Triple.cpp",
-      "$subzero_llvm_dir/lib/Support/Twine.cpp",
-      "$subzero_llvm_dir/lib/Support/circular_raw_ostream.cpp",
-      "$subzero_llvm_dir/lib/Support/raw_os_ostream.cpp",
-      "$subzero_llvm_dir/lib/Support/raw_ostream.cpp",
-      "$subzero_llvm_dir/lib/Support/regcomp.c",
-      "$subzero_llvm_dir/lib/Support/regerror.c",
-      "$subzero_llvm_dir/lib/Support/regexec.c",
-      "$subzero_llvm_dir/lib/Support/regfree.c",
-      "$subzero_llvm_dir/lib/Support/regstrlcpy.c",
+  sources = [
+    "$subzero_dir/src/IceAssembler.cpp",
+    "$subzero_dir/src/IceCfg.cpp",
+    "$subzero_dir/src/IceCfgNode.cpp",
+    "$subzero_dir/src/IceClFlags.cpp",
+    "$subzero_dir/src/IceELFObjectWriter.cpp",
+    "$subzero_dir/src/IceELFSection.cpp",
+    "$subzero_dir/src/IceFixups.cpp",
+    "$subzero_dir/src/IceGlobalContext.cpp",
+    "$subzero_dir/src/IceGlobalInits.cpp",
+    "$subzero_dir/src/IceInst.cpp",
+    "$subzero_dir/src/IceInstrumentation.cpp",
+    "$subzero_dir/src/IceIntrinsics.cpp",
+    "$subzero_dir/src/IceLiveness.cpp",
+    "$subzero_dir/src/IceLoopAnalyzer.cpp",
+    "$subzero_dir/src/IceMangling.cpp",
+    "$subzero_dir/src/IceMemory.cpp",
+    "$subzero_dir/src/IceOperand.cpp",
+    "$subzero_dir/src/IceRNG.cpp",
+    "$subzero_dir/src/IceRangeSpec.cpp",
+    "$subzero_dir/src/IceRegAlloc.cpp",
+    "$subzero_dir/src/IceRevision.cpp",
+    "$subzero_dir/src/IceSwitchLowering.cpp",
+    "$subzero_dir/src/IceTargetLowering.cpp",
+    "$subzero_dir/src/IceTargetLoweringX86.cpp",
+    "$subzero_dir/src/IceThreading.cpp",
+    "$subzero_dir/src/IceTimerTree.cpp",
+    "$subzero_dir/src/IceTypes.cpp",
+    "$subzero_dir/src/IceVariableSplitting.cpp",
+    "$subzero_llvm_dir/lib/Demangle/ItaniumDemangle.cpp",
+    "$subzero_llvm_dir/lib/Support/APInt.cpp",
+    "$subzero_llvm_dir/lib/Support/Atomic.cpp",
+    "$subzero_llvm_dir/lib/Support/CommandLine.cpp",
+    "$subzero_llvm_dir/lib/Support/ConvertUTF.cpp",
+    "$subzero_llvm_dir/lib/Support/ConvertUTFWrapper.cpp",
+    "$subzero_llvm_dir/lib/Support/Debug.cpp",
+    "$subzero_llvm_dir/lib/Support/Errno.cpp",
+    "$subzero_llvm_dir/lib/Support/ErrorHandling.cpp",
+    "$subzero_llvm_dir/lib/Support/FoldingSet.cpp",
+    "$subzero_llvm_dir/lib/Support/Hashing.cpp",
+    "$subzero_llvm_dir/lib/Support/Host.cpp",
+    "$subzero_llvm_dir/lib/Support/ManagedStatic.cpp",
+    "$subzero_llvm_dir/lib/Support/MemoryBuffer.cpp",
+    "$subzero_llvm_dir/lib/Support/Mutex.cpp",
+    "$subzero_llvm_dir/lib/Support/NativeFormatting.cpp",
+    "$subzero_llvm_dir/lib/Support/Path.cpp",
+    "$subzero_llvm_dir/lib/Support/Process.cpp",
+    "$subzero_llvm_dir/lib/Support/Program.cpp",
+    "$subzero_llvm_dir/lib/Support/Regex.cpp",
+    "$subzero_llvm_dir/lib/Support/Signals.cpp",
+    "$subzero_llvm_dir/lib/Support/SmallPtrSet.cpp",
+    "$subzero_llvm_dir/lib/Support/SmallVector.cpp",
+    "$subzero_llvm_dir/lib/Support/StringExtras.cpp",
+    "$subzero_llvm_dir/lib/Support/StringMap.cpp",
+    "$subzero_llvm_dir/lib/Support/StringRef.cpp",
+    "$subzero_llvm_dir/lib/Support/StringSaver.cpp",
+    "$subzero_llvm_dir/lib/Support/TargetParser.cpp",
+    "$subzero_llvm_dir/lib/Support/Threading.cpp",
+    "$subzero_llvm_dir/lib/Support/Timer.cpp",
+    "$subzero_llvm_dir/lib/Support/Triple.cpp",
+    "$subzero_llvm_dir/lib/Support/Twine.cpp",
+    "$subzero_llvm_dir/lib/Support/circular_raw_ostream.cpp",
+    "$subzero_llvm_dir/lib/Support/raw_os_ostream.cpp",
+    "$subzero_llvm_dir/lib/Support/raw_ostream.cpp",
+    "$subzero_llvm_dir/lib/Support/regcomp.c",
+    "$subzero_llvm_dir/lib/Support/regerror.c",
+    "$subzero_llvm_dir/lib/Support/regexec.c",
+    "$subzero_llvm_dir/lib/Support/regfree.c",
+    "$subzero_llvm_dir/lib/Support/regstrlcpy.c",
+  ]
+
+  if (target_cpu == "x64") {
+    sources += [
+      "$subzero_dir/src/IceInstX8664.cpp",
+      "$subzero_dir/src/IceTargetLoweringX8664.cpp",
     ]
-
-    if (target_cpu == "x64") {
-      sources += [
-        "$subzero_dir/src/IceInstX8664.cpp",
-        "$subzero_dir/src/IceTargetLoweringX8664.cpp",
-      ]
-    } else if (target_cpu == "x86") {
-      sources += [
-        "$subzero_dir/src/IceInstX8632.cpp",
-        "$subzero_dir/src/IceTargetLoweringX8632.cpp",
-      ]
-    } else if (target_cpu == "mipsel") {
-      sources += [
-        "$subzero_dir/src/IceAssemblerMIPS32.cpp",
-        "$subzero_dir/src/IceInstMIPS32.cpp",
-        "$subzero_dir/src/IceTargetLoweringMIPS32.cpp",
-      ]
-    } else if (target_cpu == "arm") {
-      sources += [
-        "$subzero_dir/src/IceAssemblerARM32.cpp",
-        "$subzero_dir/src/IceInstARM32.cpp",
-        "$subzero_dir/src/IceTargetLoweringARM32.cpp",
-      ]
-    }
-
-    configs = [
-      ":swiftshader_subzero_common_private_config",
-      ":swiftshader_subzero_private_config",
+  } else if (target_cpu == "x86") {
+    sources += [
+      "$subzero_dir/src/IceInstX8632.cpp",
+      "$subzero_dir/src/IceTargetLoweringX8632.cpp",
+    ]
+  } else if (target_cpu == "mipsel") {
+    sources += [
+      "$subzero_dir/src/IceAssemblerMIPS32.cpp",
+      "$subzero_dir/src/IceInstMIPS32.cpp",
+      "$subzero_dir/src/IceTargetLoweringMIPS32.cpp",
+    ]
+  } else if (target_cpu == "arm") {
+    sources += [
+      "$subzero_dir/src/IceAssemblerARM32.cpp",
+      "$subzero_dir/src/IceInstARM32.cpp",
+      "$subzero_dir/src/IceTargetLoweringARM32.cpp",
     ]
   }
+
+  configs = [
+    ":swiftshader_subzero_common_private_config",
+    ":swiftshader_subzero_private_config",
+  ]
 }
 
-swiftshader_source_set("swiftshader_reactor") {
+swiftshader_source_set("swiftshader_reactor_base") {
   deps = [
     "../OpenGL/common:swiftshader_opengl_common",
   ]
 
   sources = [
-    "Reactor.cpp",
-    "Routine.cpp",
     "Debug.cpp",
     "ExecutableMemory.cpp",
+    "Reactor.cpp",
+    "Routine.cpp",
+  ]
+}
+
+swiftshader_source_set("swiftshader_subzero_reactor") {
+  deps = [
+    ":swiftshader_reactor_base",
+    ":swiftshader_subzero",
   ]
 
+  sources = [
+    "Optimizer.cpp",
+    "SubzeroReactor.cpp",
+  ]
+
+  configs = [
+    ":swiftshader_subzero_common_private_config",
+    ":swiftshader_reactor_with_subzero_private_config",
+  ]
+}
+
+swiftshader_source_set("swiftshader_llvm_reactor") {
+  llvm7_dir = "../../third_party/llvm-7.0"
+
+  deps = [
+    ":swiftshader_reactor_base",
+    "$llvm7_dir:swiftshader_llvm",
+  ]
+
+  sources = [
+    "CPUID.cpp",
+    "LLVMReactor.cpp",
+    "LLVMRoutine.cpp",
+  ]
+
+  configs = [ ":swiftshader_reactor_private_config" ]
+
+  include_dirs = [
+    "$llvm7_dir/llvm/include/",
+    "$llvm7_dir/configs/common/include/",
+  ]
+
+  if (is_linux) {
+    include_dirs += [ "$llvm7_dir/configs/linux/include/" ]
+  } else if (is_fuchsia) {
+    include_dirs += [ "$llvm7_dir/configs/fuchsia/include/" ]
+  } else if (is_win) {
+    include_dirs += [ "$llvm7_dir/configs/windows/include/" ]
+  } else if (is_android) {
+    include_dirs += [ "$llvm7_dir/configs/android/include/" ]
+  } else {
+    assert(false, "llvm-7.0 not configured for target platform")
+  }
+}
+
+swiftshader_source_set("swiftshader_reactor") {
   if (use_swiftshader_with_subzero) {
-    deps += [ ":swiftshader_subzero" ]
-
-    sources += [
-      "Optimizer.cpp",
-      "SubzeroReactor.cpp",
-    ]
-
-    configs = [
-      ":swiftshader_subzero_common_private_config",
-      ":swiftshader_reactor_with_subzero_private_config",
-    ]
-
-    include_dirs = [
+    deps = [
+      ":swiftshader_subzero_reactor",
     ]
   } else {
-    llvm7_dir = "../../third_party/llvm-7.0"
-
-    deps += [ "$llvm7_dir:swiftshader_llvm" ]
-
-    sources += [
-      "LLVMReactor.cpp",
-      "LLVMRoutine.cpp",
-      "CPUID.cpp",
+    deps = [
+      ":swiftshader_llvm_reactor",
     ]
-
-    configs = [ ":swiftshader_reactor_private_config" ]
-
-    include_dirs = [
-      "$llvm7_dir/llvm/include/",
-      "$llvm7_dir/configs/common/include/",
-    ]
-
-    if (is_linux) {
-      include_dirs += [ "$llvm7_dir/configs/linux/include/" ]
-    } else if (is_fuchsia) {
-      include_dirs += [ "$llvm7_dir/configs/fuchsia/include/" ]
-    } else if (is_win) {
-      include_dirs += [ "$llvm7_dir/configs/windows/include/" ]
-    } else if (is_android) {
-      include_dirs += [ "$llvm7_dir/configs/android/include/" ]
-    } else {
-      assert(false, "llvm-7.0 not configured for target platform")
-    }
   }
 }
