[fuchsia] VK_FUCHSIA_buffer_collection extension.
DO NOT SUBMIT: Working prototype:

 TODO: map/unmap VMOs in VkDeviceMemory when needed.
 TODO: ??

Bug: b/140419396

Change-Id: If03f1507569b92dad76e5953bd5eb751c34e2648

--- a/src/Vulkan/BUILD.gn
+++ b/src/Vulkan/BUILD.gn
@@ -96,10 +96,21 @@ swiftshader_source_set("swiftshader_libvulkan_headers") {
       "VkSemaphoreExternalLinux.hpp",
     ]
   } else if (is_fuchsia) {
-    sources += [ "VkSemaphoreExternalFuchsia.hpp" ]
+    sources += [
+      "VkBufferCollectionFUCHSIA.hpp",
+      "VkDeviceMemoryBufferCollectionFuchsia.hpp",
+      "VkSemaphoreExternalFuchsia.hpp",
+    ]
   } else {
     sources += [ "VkSemaphoreExternalNone.hpp" ]
   }
+  if (is_fuchsia) {
+    public_deps = [
+      "//third_party/fuchsia-sdk/sdk:fdio",
+      "//third_party/fuchsia-sdk/sdk:fuchsia-sysmem",
+    ]
+  }
+
 }
 
 swiftshader_shared_library("swiftshader_libvulkan") {
@@ -139,6 +150,11 @@ swiftshader_shared_library("swiftshader_libvulkan") {
     "vk_swiftshader.def",
   ]
 
+  if (is_fuchsia) {
+    sources += [
+      "VkBufferCollectionFUCHSIA.cpp",
+    ]
+  }
   configs = [ ":swiftshader_libvulkan_private_config" ]
 
   # TODO(capn): Use the same ICD name on both Windows and non-Windows.
