Kokoro: enable ASAN on Linux builds
GCC's ASAN detects memory leaks, while Apple Clang's does not.

Bug: None
Change-Id: I406f0be999801b74032906aad558535f1c0de4d1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -469,13 +469,15 @@ else()
         list(APPEND SWIFTSHADER_COMPILE_OPTIONS "-DDCHECK_ALWAYS_ON")
     endif()
 
-    # Disable pedanitc warnings
+    # Disable pedantic warnings
     if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
         list(APPEND SWIFTSHADER_COMPILE_OPTIONS
             "-Wno-ignored-attributes"   # ignoring attributes on template argument 'X'
             "-Wno-attributes"           # 'X' attribute ignored
             "-Wno-strict-aliasing"      # dereferencing type-punned pointer will break strict-aliasing rules
             "-Wno-comment"              # multi-line comment
+            # Silence LLVM7 warnings (remove once we get rid of LLVM7)
+            "-Wno-error=init-list-lifetime"
         )
     elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
         list(APPEND SWIFTSHADER_COMPILE_OPTIONS
