--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "third_party/PowerVR_Examples"]
 	path = third_party/PowerVR_Examples
 	url = https://github.com/powervr-graphics/Native_SDK.git
+[submodule "third_party/benchmark"]
+	path = third_party/benchmark
+	url = https://github.com/google/benchmark.git
