vulkan: Support VK_KHR_external_memory_fd on OS X.
This CL adds a Posix-based implementation for the
VK_KHR_external_memory_fd Vulkan extension, using the SysV
shm_open() / shm_unlink() API to create the shared
memory region.

The Linux backend still uses memfd-based regions which
are easier to create, and because Android does not provide
shm_open() intentionally [1].

DO NOT SUBMIT: Still experimental, the BUILD.gn file will
force the use of shm_open() on Linux for debugging purpose,
this will be removed in the a next version of this CL.

Bug: None

[1] https://android.googlesource.com/platform/ndk/+/4e159d95ebf23b5f72bb707b0cb1518ef96b3d03/docs/system/libc/SYSV-IPC.TXT

--- a/src/Vulkan/BUILD.gn
+++ b/src/Vulkan/BUILD.gn
@@ -52,6 +52,11 @@ config("swiftshader_libvulkan_private_config") {
   }
 }
 
+# TODO(digit): Remove this once debugging is complete.
+if (is_linux) {
+  _use_posix_external_memory = true
+}
+
 swiftshader_source_set("swiftshader_libvulkan_headers") {
   sources = [
     "Version.h",
@@ -94,6 +99,14 @@ swiftshader_source_set("swiftshader_libvulkan_headers") {
     sources += [
       "VkDeviceMemoryExternalLinux.hpp",
       "VkSemaphoreExternalLinux.hpp",
+    ]
+    if (_use_posix_external_memory) {
+      sources -= [ "VkDeviceMemoryExternalLinux.hpp" ]
+      sources += [ "VkDeviceMemoryExternalPosix.hpp" ]
+    }
+  } else if (is_mac) {
+    sources += [
+      "VkDeviceMemoryExternalPosix.hpp",
     ]
   } else if (is_fuchsia) {
     sources += [ "VkSemaphoreExternalFuchsia.hpp" ]
@@ -160,6 +173,10 @@ swiftshader_shared_library("swiftshader_libvulkan") {
     ]
     ldflags = [ "-Wl,--version-script=" +
                 rebase_path("vk_swiftshader.lds", root_build_dir) ]
+  }
+
+  if (is_linux && _use_posix_external_memory) {
+    defines = [ "USE_POSIX_EXTERNAL_MEMORY=1" ]
   }
 
   deps = [
