WIP-regres-subzero
DO NOT COMMIT

Change-Id: Ib363228326f1d1a26acd41f02bcd121f3276b08a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,7 +133,7 @@ else()
     set_if_not_defined(SWIFTSHADER_BUILD_CPPDAP 0)
 endif()
 
-set(DEFAULT_REACTOR_BACKEND "LLVM")
+set(DEFAULT_REACTOR_BACKEND "Subzero")
 
 set(REACTOR_BACKEND ${DEFAULT_REACTOR_BACKEND} CACHE STRING "JIT compiler back-end used by Reactor")
 set_property(CACHE REACTOR_BACKEND PROPERTY STRINGS LLVM Subzero)
