Enable MSan instrumentation for GN builds
MemorySanitizer instrumentation was not yet enabled for GN builds,
resulting in only the use of __msan_unpoison calls. It does not handle
the shadow values for function parameters and return values, so function
calls could still result in false positives.

Setting the REACTOR_ENABLE_MEMORY_SANITIZER_INSTRUMENTATION macro makes
us use the proper MemorySanitizer instrumentation.

Bug: b/187467599
Bug: b/155148722
Change-Id: Ia51f5a072f2b9b2d8a2a72fd2e5833a7c8735ec9

--- a/src/Reactor/BUILD.gn
+++ b/src/Reactor/BUILD.gn
@@ -29,6 +29,9 @@ config("swiftshader_llvm_reactor_private_config") {
     defines = [
       "__STDC_CONSTANT_MACROS",
       "__STDC_LIMIT_MACROS",
+      # Enable instrumentation of Reactor routines for MemorySanitizer builds (LLVM backend).
+      # TODO(b/155148722): Remove when unconditionally instrumenting for all build systems.
+      "REACTOR_ENABLE_MEMORY_SANITIZER_INSTRUMENTATION=1",
     ]
 
     if (current_cpu == "x86" || current_cpu == "x64") {
