--- a/src/Vulkan/BUILD.gn
+++ b/src/Vulkan/BUILD.gn
@@ -64,6 +64,7 @@ swiftshader_source_set("swiftshader_libvulkan_headers") {
     "VkCommandBuffer.hpp",
     "VkCommandPool.hpp",
     "VkConfig.hpp",
+    "VkDebugImage.hpp",
     "VkDebugUtilsMessenger.hpp",
     "VkDescriptorPool.hpp",
     "VkDescriptorSet.hpp",
@@ -117,6 +118,7 @@ swiftshader_shared_library("swiftshader_libvulkan") {
     "VkBufferView.cpp",
     "VkCommandBuffer.cpp",
     "VkCommandPool.cpp",
+    "VkDebugImage.cpp",
     "VkDebugUtilsMessenger.cpp",
     "VkDescriptorPool.cpp",
     "VkDescriptorSet.cpp",
