--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "third_party/git-hooks"]
 	path = third_party/git-hooks
 	url = https://swiftshader.googlesource.com/git-hooks
+[submodule "third_party/stb/stb"]
+	path = third_party/stb/stb
+	url = https://github.com/nothings/stb.git
