Link in `libstdc++fs` to get std::filesystem symbols
Change-Id: I2141fd85db7155ef2f9fb2ccf4702a10304e6dfb

--- a/tests/VulkanUnitTests/CMakeLists.txt
+++ b/tests/VulkanUnitTests/CMakeLists.txt
@@ -75,4 +75,5 @@ target_link_libraries(vk-unittests
         SPIRV-Tools
         VulkanWrapper
         ${ROOT_PROJECT_LINK_LIBRARIES}
+        stdc++fs
 )
