--- a/project.config
+++ b/project.config
@@ -6,6 +6,7 @@
 	submit = group swiftshader-scoped-luci-account
 	create = group cria/project-swiftshader-committers
 	exclusiveGroupPermissions = label-Code-Review push
+	label-Code-Review = -2..+2 group cria/project-swiftshader-committers
 	label-Code-Review = -2..+2 group cria/project-swiftshader-owners
 	label-Code-Review = -1..+1 group cria/project-swiftshader-tryjob-access
 	label-Commit-Queue = +0..+2 group cria/project-swiftshader-tryjob-access
