New DRM format modifiers
This CL adds a version of drm_fourcc.h, called
drm_fourcc_swiftshader.h, which is essentially
is the same as the original file, minus any
external dependencies, to make it work on any
platform, plus a new vendor, for Google, called
(DRM_FORMAT_MOD_VENDOR_GOOGLE). It also adds a
corresponding drm modifier to a few corresponding
VkFormats.

This CL does not yet add support for custom rowPitch,
from VkImageDrmFormatModifierExplicitCreateInfoEXT, as
there are currently no tests covering that (See
https://gitlab.khronos.org/Tracker/vk-gl-cts/-/issues/3025).

Bug: b/194190269
Change-Id: I7a140aef42c318513befc8d8ec05d70ab43fec38
Tests: dEQP-VK.*

--- a/src/Vulkan/BUILD.gn
+++ b/src/Vulkan/BUILD.gn
@@ -58,6 +58,7 @@ config("swiftshader_libvulkan_private_config") {
 
 swiftshader_source_set("swiftshader_libvulkan_headers") {
   sources = [
+    "drm_fourcc_swiftshader.h",
     "Version.hpp",
     "VkBuffer.hpp",
     "VkBufferView.hpp",
